# tree-sitter-highlight-server

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
assets/stylesheets/: atom_ayu_dark.css  ayu-vim.css  frameworks-eca8e21af2622cbcba2c93c67f79baed.css  github-dark.css
macros/: Cargo.toml
macros/src/: lib.rs
src/: custom_colors.rs  main.rs  stylesheet.rs  sublime_colors.rs  svg_renderer.rs  tests.rs  utils.rs
