[package]
name = "macros"
version = "0.1.0"
authors = ["kraftwerk28 <kefirchik3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.60", features = ["parsing"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"

[lib]
proc-macro = true
